2006-02-10  Derek Atkins  <derek@ihtfp.com>

	* src/gnome-utils/dialog-options.c:
	  Test for an empty string when translating.  (Fixes #330179)

	* Makefile.am:
	  added README.dependencies to the dist.  Fixes #330614.

	* configure.in:
	  check that we can find g-wrap-wct.h.
	  detects that we're running on a "broken" system like Ubuntu.
	  This is in response to #330539.

2006-02-09  David Hampton  <hampton@employees.org>

	* src/bin/gnucash-bin.c: Pass argc by reference instead of value
	so g_option_parse_context can update it.

	* src/bin/gnucash-bin.c: Don't initialize the display at option
	parsing time.  This way --add-price-quotes can run from a cron
	job.

	* src/gnome-utils/glade/commodity.glade:
	* src/gnome-utils/dialog-commodity.c:
	* src/engine/gnc-commodity.c: Update for known F::Q 1.11 quote
	sources.

	* src/quotes/finance-quote-check.in:
	* src/scm/price-quotes.scm: Print out the installed F::Q version
	at startup.
	
2006-02-09  Derek Atkins  <derek@ihtfp.com>

	* macros/legacy_macros.m4: when the guile version check fails,
	  print out the version of guile that we found in order to
	  aid debugging.

2006-02-09  David Hampton  <hampton@employees.org>

	* src/register/ledger-core/split-register-control.c: Better fix
	for the code that updates the buy/sell action based on the number
	of shares entered in a transaction.

2006-02-08  David Hampton  <hampton@employees.org>

	* src/register/ledger-core/split-register-control.c: Fix the code
	that updates the buy/sell action based on the number of shares
	entered in a transaction.

	* src/gnome/dialog-price-edit-db.c:
	* src/engine/gnc-pricedb.c: A couple of performance enhancements.

	* src/gnome/gnc-plugin-basic-commands.c: Set the busy cursor while
	the dialogs are being generated.

	* src/gnome/glade/commodities.glade:
	* src/gnome/glade/price.glade: Set the window type hint to normal.

	* src/gnome-utils/glade/commodity.glade: Fix a duplicate
	accelerator key.
